--- a/src/components/Ticker/Ticker.css
+++ b/src/components/Ticker/Ticker.css
@@ -7,13 +7,23 @@
   pointer-events: none;
 }
 
-.Ticker-header {
-  background-color: #282c34;
+.Ticker-div {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.Ticker-searchbar {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 2px 25px 8px 10px;
 }
 
