feat: Added rudimentary long call data feat: Transitioned to IEX Cloud for 52 wk high/low data feat: Updated css + github favicon

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,12 +14,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: navy;
 }
 
 .App-link {
